--- a/main.css
+++ b/main.css
@@ -50,6 +50,6 @@ video {
 #show-user-media img {
   max-width: 100%;
   height: 97%;
-  border-radius: 5px 100px 20px;
+  border-radius: 5px;
   box-shadow: 1px 3px 30px 2px #000000;
 }
