--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ video {
   border: 1px solid #ffffff;
   font-size: 15px;
   padding: 10px;
+  width: 33%;
 }
 #table-logs td {
   border: 2px solid #09ff00;
