--- a/main.css
+++ b/main.css
@@ -58,18 +58,21 @@ video {
 #table-logs {
   position: fixed;
   bottom: 0px;
-  border: 1px solid blue;
-  width: 500px;
-  height: 100x;
+  border: 1px solid yellow;
+  height: 100px;
   background-color: #000000;
-  max-width: 90%;
+  max-width: 100%;
 }
-
+#table-logs tbody {
+  float: left;
+  width: 100%;
+}
 #table-logs th {
   border: 1px solid #ffffff;
   font-size: 15px;
   padding: 10px;
-  width: 33%;
+  line-height: 20px;
+  height: 10px;
 }
 #table-logs td {
   border: 2px solid #09ff00;
